	are particularly important.  They describe changes that are
	incompatible with earlier releases or are significantly
	different.

	!!!!!!!! READ THE RELEASE.NOTES !!!!!!!!

-------------------------------------------------------------------------------

	2005-08-14

	* When directory name is argument for bogoutil's dump/load
	  option, use "wordlist.db" to avoid a sigsegv.

	2005-08-05

	* db_lock.c: rename "cell_t" to "bf_cell_t" to avoid clashing with
	  IRIX's cell_t. Reported by Daichi Kawahata.

	* configure.ac: MIPS doesn't have extended FP precisiopn. Patch by
	  Daichi Kawahata.

	2005-08-03

	* bogotune - Restored code for recommending db_cachesize value.

	2005-07-10

	* Bogofilter now complains if sqlite 3.2.1 or older is used on a
	  machine with a word width greater than 32 bits, but tries to proceed.
	  It may however crash with SIGBUS as sqlite 3.2.1 performs unaligned
	  64-bit accesses.  sqlite 3.2.2 or newer is strongly recommended.

	2005-07-04

	* Updated history of stable releases (file RELEASES).

	2005-07-03

	* Switched t.encoding test to use the POSIX utility cksum,
	  rather than OS-specific utilities such as md5sum or md5.

0.95.2	2005-06-30
	2005-07-08 - Promoted to Stable Release

	2005-06-29

	* Fix incorrect directory creation revealed by t.bogodir.
	* Use unicode & transaction enable/disable flags to limit
	  'make check' tests being run.

	2005-06-28

	* Fixed buffer allocation error causing problem processing
	  RFC2047 encoded words.
	* Fixed wordlist access problems causing bogotune to
	  incorrectly complain of mixed database encodings.

	2005-06-21

	* Bogofilter programs now use their own locking for transactional
	  databases, to evade the problems with overflowing lock tables,
	  resizing. The database is locked globally, which no longer allows
	  registrations to happen concurrently with read access.

	  The db-lk-max-locks and db-lk-max-objects options and the bf_resize
	  scripts and pages have been removed.
